--- a/msmewb/templates/CustomerDashboardWB.html
+++ b/msmewb/templates/CustomerDashboardWB.html
@@ -15,6 +15,7 @@
  		<br><br>
  		<button type="submit" name="View">View Loan Applications</button>
  		<br><br>
+		 <button type="button"><a href="{% url 'Logout' %}">Logout</a></button>
  	</form>
  </body>
 
