--- a/msmewb/templates/CustomerDisplayApplications.html
+++ b/msmewb/templates/CustomerDisplayApplications.html
@@ -10,6 +10,7 @@
     </head>
     <body>    
 		   <div>
+           <button type="button"><a href="{% url 'Logout' %}">Logout</a></button>
             <table>
                 <thead>
                     <tr>
