--- a/msmewb/templates/ManagerApplicationDetails.html
+++ b/msmewb/templates/ManagerApplicationDetails.html
@@ -28,6 +28,7 @@
     <body>    
 		   <div>
             <h1>Loan Details</h1>
+            <button type="button"><a href="{% url 'Logout' %}">Logout</a></button>
             <table>
                 <thead>
                     <tr>
