--- a/msmeapp/templates/BusinessDetails.html
+++ b/msmeapp/templates/BusinessDetails.html
@@ -219,6 +219,32 @@ State.options.add(opt);
 </script>
 		</head>
 		<body>
+			<div class="progress">
+			<div class="circle done"> <!--add the 'done' class for completed steps-->
+			<span class="label">1</span> <!--step number-->
+			<span class="title">Loan Details</span> <!--step title-->
+			<span class="bar"></span>
+			</div>
+			<div class="circle active"> <!--add the 'active' class for the current step-->
+			<span class="label">2</span>
+			<span class="title">Business Details</span>
+			<span class="bar"></span>
+			</div>
+			<div class="circle"> <!--no added class for future steps-->
+			<span class="label">3</span>
+			<span class="title">Contact Details</span>
+			<span class="bar"></span>
+			</div>
+			<div class="circle"> <!--add the 'done' class for completed steps-->
+			<span class="label">4</span> <!--step number-->
+			<span class="title">Financial Details</span> <!--step title-->
+			<span class="bar"></span>
+			</div>
+			<div class="circle"> <!--add the 'done' class for completed steps-->
+			<span class="label">5</span> <!--step number-->
+			<span class="title">Documents</span> <!--step title-->
+			</div>
+			</div>
 			<form action="" method="POST">
 				{% csrf_token %}
 				<h1>Business Details</h1>
@@ -302,5 +328,7 @@ State.options.add(opt);
 					<button type="submit" onsubmit="POST">Next</button>
 				</div>
 			</form>
+			</fieldset>
+			
 
 		</body>
