--- a/msmeapp/templates/ContactDetails.html
+++ b/msmeapp/templates/ContactDetails.html
@@ -224,7 +224,32 @@ function createOption(State, text, value)
 </script>
     </head>
     <body>
-
+      <div class="progress">
+      <div class="circle done"> <!--add the 'done' class for completed steps-->
+      <span class="label">1</span> <!--step number-->
+      <span class="title">Loan Details</span> <!--step title-->
+      <span class="bar"></span>
+      </div>
+      <div class="circle done"> <!--add the 'active' class for the current step-->
+      <span class="label">2</span>
+      <span class="title">Business Details</span>
+      <span class="bar"></span>
+      </div>
+      <div class="circle active"> <!--no added class for future steps-->
+      <span class="label">3</span>
+      <span class="title">Contact Details</span>
+      <span class="bar"></span>
+      </div>
+      <div class="circle"> <!--add the 'done' class for completed steps-->
+      <span class="label">4</span> <!--step number-->
+      <span class="title">Financial Details</span> <!--step title-->
+      <span class="bar"></span>
+      </div>
+      <div class="circle"> <!--add the 'done' class for completed steps-->
+      <span class="label">5</span> <!--step number-->
+      <span class="title">Documents</span> <!--step title-->
+      </div>
+      </div>
       <form action="" method="POST" name="Contact">
         {% csrf_token %}
         <h1>Contact Details</h1>
@@ -342,4 +367,5 @@ function createOption(State, text, value)
          <button type="submit" onsubmit="Post">Next</button>
          <br>
       </form>
+
     </body>
