--- a/msmeapp/templates/DashBoard1.html
+++ b/msmeapp/templates/DashBoard1.html
@@ -70,6 +70,7 @@
                -->      <!-- {% endfor %} -->
                 </tbody>
             </table>
+            <button type="submit" name="Logout" id="btn2">Logout</button>
         </div>
     </form>
 </body>
