--- a/msmeapp/templates/Documents.html
+++ b/msmeapp/templates/Documents.html
@@ -8,7 +8,33 @@
 			 <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type='text/css'>
 			 <link rel="stylesheet" href="CSS/main.css">
 		</head>
-		<body>> 
+		<body>
+				<div class="progress">
+				<div class="circle done"> <!--add the 'done' class for completed steps-->
+				<span class="label">1</span> <!--step number-->
+				<span class="title">Loan Details</span> <!--step title-->
+				<span class="bar"></span>
+				</div>
+				<div class="circle done"> <!--add the 'active' class for the current step-->
+				<span class="label">2</span>
+				<span class="title">Business Details</span>
+				<span class="bar"></span>
+				</div>
+				<div class="circle done"> <!--no added class for future steps-->
+				<span class="label">3</span>
+				<span class="title">Contact Details</span>
+				<span class="bar"></span>
+				</div>
+				<div class="circle done"> <!--add the 'done' class for completed steps-->
+				<span class="label">4</span> <!--step number-->
+				<span class="title">Financial Details</span> <!--step title-->
+				<span class="bar"></span>
+				</div>
+				<div class="circle active"> <!--add the 'done' class for completed steps-->
+				<span class="label">5</span> <!--step number-->
+				<span class="title">Documents</span> <!--step title-->
+				</div>
+				</div> 
 				<h1>Documents</h1>
 				<h1>{{what}}</h1>
 				<fieldset>
