--- a/msmeapp/templates/LoanDetails.html
+++ b/msmeapp/templates/LoanDetails.html
@@ -1,42 +1,99 @@
-{% load staticfiles %}
+{% load static %}
 
-  	<head>
-				<meta charset="utf-8">
-				<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<title>Loan Details</title>
-				<link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
-			 <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type='text/css'>
-			 <link rel="stylesheet" href="CSS/main.css">
-		</head>
-		<body>
-			<form action="" method="POST"> 
-				{% csrf_token %}
-				<h1>Loan Details</h1>
-				
-				<fieldset>
-					<!-- <div class="""slidecontainer">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Loan Details</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type='text/css'>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
+</head>
+
+<body>
+	<div class="progress">
+		<div class="circle active">
+			<!--add the 'done' class for completed steps-->
+			<span class="label">1</span>
+			<!--step number-->
+			<span class="title">Loan Details</span>
+			<!--step title-->
+			<span class="bar"></span>
+		</div>
+		<div class="circle">
+			<!--add the 'active' class for the current step-->
+			<span class="label">2</span>
+			<span class="title">Business Details</span>
+			<span class="bar"></span>
+		</div>
+		<div class="circle">
+			<!--no added class for future steps-->
+			<span class="label">3</span>
+			<span class="title">Contact Details</span>
+			<span class="bar"></span>
+		</div>
+		<div class="circle">
+			<!--add the 'done' class for completed steps-->
+			<span class="label">4</span>
+			<!--step number-->
+			<span class="title">Financial Details</span>
+			<!--step title-->
+			<span class="bar"></span>
+		</div>
+		<div class="circle">
+			<!--add the 'done' class for completed steps-->
+			<span class="label">5</span>
+			<!--step number-->
+			<span class="title">Documents</span>
+			<!--step title-->
+		</div>
+	</div>
+	<form action="" method="POST">
+		{% csrf_token %}
+		<h1>Loan Details</h1>
+
+		<fieldset>
+			<!-- <div class="""slidecontainer">
   					<input type="range" min="30000" max="100000" value="30000" class="slider" id="myRange" name="myRange"step='1000'>
   					<p>Value: <span id="demo" ></span></p>
 					</div> -->
-					<label for="Amount">Amount:</label>
-					<input type="text" id="Amount" name="Amount">
-					<br>
-					<label for="Purpose">Purpose:</label>
-					<select name="Purpose" id="Purpose">
-  <option value="A">Expansion</option>
-  <option value="B">Capital</option>
-  <option value="C">Wages</option>
-</select>
-<label for="Tenure">Tenure(6-12m):</label>
-					<input type="text" id="Tenure" name="Tenure">
-					<br>
-					<label for="Frequency">Frequency:</label>
-					<input type="text" id="Frequency" name="Frequency">
-					<br>
-										<button type="submit" onsubmit="POST">Next</button>
+			<!-- Slider bar -->
+			<label for="Amount">Loan Amount:</label>
+			<div class="slidecontainer">
+				<input type="range" min="10000" max="150000" name="Amount" value="30000" class="slider" id="myRange"
+					step="1000">
+				<p>Rs: <span id="demo"></span></p>
+			</div>
+			<!--Java script code for slider-->
+			<script>
+				let active = "#64c3ef",
+					inactive = "#dbdbdb"
+				var slider = document.getElementById("myRange");
+				var output = document.getElementById("demo");
+				output.innerHTML = slider.value;
+				slider.oninput = function () {
 
-
-<!-- <script>
+					// this.style.background = `linear-gradient(90deg, ${active} 0% ${this.value/10000}%, ${inactive} ${this.value/10000}% 100%)`
+					output.innerHTML = this.value;
+				}
+			</script>
+			<!--<label for="Amount">Amount:</label>
+					<input type="text" id="Amount" name="Amount">-->
+			<br>
+			<label for="Purpose">Purpose:</label>
+			<select name="Purpose" id="Purpose">
+				<option value="A">Expansion</option>
+				<option value="B">Capital</option>
+				<option value="C">Wages</option>
+			</select>
+			<label for="Tenure">Tenure(6-12m):</label>
+			<input type="text" id="Tenure" name="Tenure">
+			<br>
+			<label for="Frequency">Frequency:</label>
+			<input type="text" id="Frequency" name="Frequency">
+			<br>
+			<button type="submit" onsubmit="POST">Next</button>
+			<!-- <script>
 var slider = document.getElementById("myRange");
 var output = document.getElementById("demo");
 output.innerHTML = slider.value;
@@ -45,45 +102,90 @@ slider.oninput = function() {
   output.innerHTML = this.value;
 }
 </script> -->
-<style>
-.slidecontainer {
-  width: 100%;
-}
+			<style>
+				.slidecontainer {
+					width: 100%;
+				}
 
-.slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 15px;
-  border-radius: 5px;
-  background: #d3d3d3;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-}
+				.slider {
+					-webkit-appearance: none;
+					width: 100%;
+					height: 15px;
+					border-radius: 5px;
+					background: #d3d3d3;
+					outline: none;
+					opacity: 0.8;
+					-webkit-transition: .2s;
+					transition: opacity .2s;
+				}
 
-.slider:hover {
-  opacity: 1;
-}
+				input[type="range"] {
+					-webkit-appearance: none;
+					-moz-apperance: none;
+					border-radius: 6px;
+					height: 6px;
+					background-image: -webkit-gradient(linear,
+						left top,
+						right top,
+						color-stop(0.15, #00CED1),
+						color-stop(0.15, #C5C5C5));
+				}
 
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: #4CAF50;
-  cursor: pointer;
-}
+				input[type='range']::-webkit-slider-thumb {
+					-webkit-appearance: none !important;
+					background-color: #FF2800;
+					border: 1px solid #CECECE;
+					height: 20px;
+					width: 20px;
+				}
 
-.slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: #4CAF50;
-  cursor: pointer;
-}
-</style>
-</fieldset>
-</form>
+				/* .slider {
+					-webkit-appearance: none;
+					-moz-appearance: none;
+					appearance: none;
+					background: linear-gradient(90deg, #64c3ef 0% 50%, #dbdbdb 50% 100%);
+					outline: none;
+					border-radius: 15px;
+					width: 100%;
+					height: 15px;
+ 	
+				position: absolute;
+
+				}*/
+				.slider:hover {
+					opacity: 1;
+				}
+
+				.slider::-webkit-slider-thumb {
+					-webkit-appearance: none;
+					appearance: none;
+					width: 25px;
+					height: 25px;
+					border-radius: 50%;
+					background: #4CAF50;
+					cursor: pointer;
+				}
+
+				.slider::-moz-range-thumb {
+					width: 25px;
+					height: 25px;
+					border-radius: 50%;
+					background: #4CAF50;
+					cursor: pointer;
+				}
+			</style>
+		</fieldset>
+	</form>
+	<script>
+			$('input[type="range"]').on('input',function () {
+				var val = ($(this).val() - $(this).attr('min')) / ($(this).attr('max') - $(this).attr('min'));
+	
+				$(this).css('background-image',
+					'-webkit-gradient(linear, left top, right top, '
+					+ 'color-stop(' + val + ', #00CED1), '
+					+ 'color-stop(' + val + ', #C5C5C5)'
+					+ ')'
+				);
+			});
+		</script>
 </body>
