--- a/msmewb/templates/Blacklist.html
+++ b/msmewb/templates/Blacklist.html
@@ -15,5 +15,6 @@
     	 <form action="" method="POST">
             {% csrf_token %}
     	<button type="submit" onclick="POST" name="view_apps">View Applications</button>
+      <button type="button"><a href="{% url 'Logout' %}">Logout</a></button>
     </body>
 {% endblock %}
