--- a/msmewb/templates/CustomerDetails.html
+++ b/msmewb/templates/CustomerDetails.html
@@ -11,6 +11,7 @@
     <body>    
 		   <div>
             <h1>Loan Details</h1>
+            <button type="button"><a href="{% url 'Logout' %}">Logout</a></button>
             <table>
                 <thead>
                     <tr>
