--- a/msmewb/templates/DocumentsRejected.html
+++ b/msmewb/templates/DocumentsRejected.html
@@ -15,6 +15,7 @@
     	 <form action="" method="POST">
             {% csrf_token %}
     	<button type="submit" onclick="POST" name="view_apps">View Applications</button>
+      <button type="button"><a href="{% url 'Logout' %}">Logout</a></button>
     </body>
 
 {% endblock %}
