--- a/msmewb/templates/LoginWB.html
+++ b/msmewb/templates/LoginWB.html
@@ -3,8 +3,7 @@
     <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Login</title>
-   <link rel="stylesheet" href="static/blog.css">
-   <link rel="stylesheet" href="static/exp.css">
+   <link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
 </head>
 <body>
     <form action="" method="POST">
@@ -14,10 +13,10 @@
        <fieldset>
 
          <label for="Eid">Employee ID:</label>
-         <input type="text" id="eid" name="eid">
+         <input type="text" id="eid" name="eid" autocomplete="on" autofocus>
 
          <label for="password">Password:</label>
-         <input type="password" id="password" name="password">
+         <input type="password" id="password" name="password" autocomplete="on">
 
 
           <button type="submit" onsubmit="Post">Login</button>
