--- a/msmewb/templates/Staff.html
+++ b/msmewb/templates/Staff.html
@@ -15,6 +15,7 @@
  		<br><br>
  		<button type="submit" name="View">View CS Verified Applications</button>
  		<br><br>
+		<button type="button"><a href="{% url 'Logout' %}">Logout</a></button>
  	</form>
  </body>
 
