--- a/msmeapp/static/CSS/blog.css
+++ b/msmeapp/static/CSS/blog.css
@@ -60,14 +60,14 @@ select {
 }
 
 button {
-  padding: 19px 39px 18px 39px;
+  padding: 15px;
   color: #FFF;
   background-color: #4bc970;
   font-size: 18px;
   text-align: center;
   font-style: normal;
   border-radius: 5px;
-  width: 100%;
+  width: 100px;
   border: 1px solid #3ac162;
   border-width: 1px 1px 3px;
   box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
