--- a/msmewb/static/CSS/exp.css
+++ b/msmewb/static/CSS/exp.css
@@ -111,6 +111,9 @@ label.light {
   text-shadow: 0 1px 0 rgba(255,255,255,0.2);
   border-radius: 100%;
 }
+a {
+  text-decoration: none;
+}
 
 @media screen and (min-width: 480px) {
 
