--- a/msmewb/templates/Blacklist.html
+++ b/msmewb/templates/Blacklist.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blacklist</title>
-        <link rel="stylesheet" href="static/blog.css">
-        <link rel="stylesheet" href="static/exp.css">       
+        <link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
+        <link rel="stylesheet" href="{% static 'CSS/blog.css' %}">          
     </head>
     <body>
     	<h1>Application has been successfully blacklisted</h1>
