--- a/msmewb/templates/LoanApproved.html
+++ b/msmewb/templates/LoanApproved.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Loan Approved</title>
-        <link rel="stylesheet" href="static/blog.css">
-        <link rel="stylesheet" href="static/exp.css">       
+        <link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
+        <link rel="stylesheet" href="{% static 'CSS/blog.css' %}">           
     </head>
     <body>
     	<h1>Loan has been approved, amount has been disbursed</h1>
