--- a/msmewb/templates/ManagerApplicationDetails.html
+++ b/msmewb/templates/ManagerApplicationDetails.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Detailed Info</title>
-        <link rel="stylesheet" href="static/blog.css">
-        <link rel="stylesheet" href="static/exp.css">    
+        <link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
+        <link rel="stylesheet" href="{% static 'CSS/blog.css' %}">        
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>    
