--- a/msmeapp/templates/DashBoard1.html
+++ b/msmeapp/templates/DashBoard1.html
@@ -15,7 +15,7 @@
     {% csrf_token %}
      <div>
             <h1>Loan Details</h1>
-            <table>
+            <table class="table table-hover table-striped table-bordered" style="background-color: white; margin-top:50px;">
                 <thead>
                     <tr>
                         <th>Application ID</th>
