--- a/msmeapp/templates/ContactDetails.html
+++ b/msmeapp/templates/ContactDetails.html
@@ -7,6 +7,17 @@
   <link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type='text/css'>
   <link rel="stylesheet" href="CSS/main.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
   <script>
 
 
@@ -295,8 +306,8 @@
       }
 
       else {
-      return true
-      document.forms["Contact"].submit();
+        return true
+        document.forms["Contact"].submit();
       }
 
     }
@@ -304,8 +315,8 @@
   </script>
 </head>
 
-<body>
-  <div class="progress">
+<body style="background-color:#f5f5f5;">
+  <div class="progress" style="margin-top:100px;height:5rem;display:block;overflow:visible;background-color:#f5f5f5;">
     <div class="circle done">
       <!--add the 'done' class for completed steps-->
       <span class="label">1</span>
@@ -350,65 +361,59 @@
 
 
       <label for="Name">Name:</label>
-      <input type="text" id="Name" name="Name">
+      <input type="text" id="Name" name="Name" class="form-control form-control-lg">
       <br>
 
 
       <label for="Age">Age:</label>
-      <input type="Number" id="Age" name="Age">
+      <input type="Number" id="Age" name="Age" class="form-control form-control-lg">
       <br>
 
       <br>
       <label for="Gender">Gender:</label>
-      <input type="radio" name="gender" value="M"> Male&nbsp&nbsp
-      <input type="radio" name="gender" value="F"> Female&nbsp&nbsp
-      <input type="radio" name="gender" value="O"> Other&nbsp&nbsp
-      <br>
+      <input type="radio" name="gender" value="M"> Male
+      <input type="radio" name="gender" value="F"> Female
+      <input type="radio" name="gender" value="O"> Other
       <br>
       <br>
       <label for="Mobile Number">Mobile Number:</label>
       <br>
-      <input type="Number" id="mobile" name="mobile">
-      <br>
+      <input type="Number" id="mobile" name="mobile" class="form-control form-control-lg">
       <br>
       <label for="Email id">Email id:</label>
       <br>
-      <input type="email" id="email" name="email">
+      <input type="email" id="email" name="email" class="form-control form-control-lg">
       <br>
 
       <label for="PAN">PAN:</label>
       <br>
-      <input type="text" id="pan" name="pan">
+      <input type="text" id="pan" name="pan" class="form-control form-control-lg">
       <br>
       <label for="HNO">House No:</label>
       <br>
-      <input type="text" id="HNO" name="HNO">
+      <input type="text" id="HNO" name="HNO" class="form-control form-control-lg">
       <br>
       <label for="Area">Area:</label>
       <br>
-      <input type="text" id="area" name="area">
+      <input type="text" id="area" name="area" class="form-control form-control-lg">
       <br>
       <label for="Street">Street:</label>
       <br>
-      <input type="text" id="street" name="street">
+      <input type="text" id="street" name="street" class="form-control form-control-lg">
       <br>
       <label for="Pincode">Pincode:</label>
       <br>
-      <input type="Number" id="pincode" name="pincode">
+      <input type="Number" id="pincode" name="pincode" class="form-control form-control-lg">
       <br>
       <label for="Country">Country:</label>
-      <br>
-      <br>
-
-      <select id="country" name="country">
+      <select id="country" name="country" class="form-control form-control-lg">
         <option value=""> </option>
         <option value="India">India</option>
       </select>
       <br>
-      <br>
 
       <label for="State">State:</label>
-      <select id="State" name="state" onchange="changeList(this,'City'); ">
+      <select id="State" name="state" onchange="changeList(this,'City'); " class="form-control form-control-lg">
         <option value=""> </option>
         <option value="AndhraPradesh">Andhra Pradesh</option>
         <option value="ArunachalPradesh">Arunachal Pradesh</option>
@@ -444,12 +449,10 @@
 
       <label for="City">City:</label>
       <br>
-      <select id="City" name="City">
+      <select id="City" name="City" class="form-control form-control-lg">
       </select>
 
       <br>
-
-
 
 
 
