--- a/msmeapp/templates/Documents.html
+++ b/msmeapp/templates/Documents.html
@@ -1,46 +1,69 @@
 {% load staticfiles %}
 
-  	<head>
-				<meta charset="utf-8">
-				<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<title>Documents</title>
-				<link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
-			 <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type='text/css'>
-			 <link rel="stylesheet" href="CSS/main.css">
-		</head>
-		<body>
-				<div class="progress">
-				<div class="circle done"> <!--add the 'done' class for completed steps-->
-				<span class="label">1</span> <!--step number-->
-				<span class="title">Loan Details</span> <!--step title-->
-				<span class="bar"></span>
-				</div>
-				<div class="circle done"> <!--add the 'active' class for the current step-->
-				<span class="label">2</span>
-				<span class="title">Business Details</span>
-				<span class="bar"></span>
-				</div>
-				<div class="circle done"> <!--no added class for future steps-->
-				<span class="label">3</span>
-				<span class="title">Contact Details</span>
-				<span class="bar"></span>
-				</div>
-				<div class="circle done"> <!--add the 'done' class for completed steps-->
-				<span class="label">4</span> <!--step number-->
-				<span class="title">Financial Details</span> <!--step title-->
-				<span class="bar"></span>
-				</div>
-				<div class="circle active"> <!--add the 'done' class for completed steps-->
-				<span class="label">5</span> <!--step number-->
-				<span class="title">Documents</span> <!--step title-->
-				</div>
-				</div> 
-				<h1>Documents</h1>
-				<h1>{{what}}</h1>
-				<fieldset>
-					<form method="post" enctype="multipart/form-data">
-						{% csrf_token %}
-					<br>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Documents</title>
+	<link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
+	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type='text/css'>
+	<link rel="stylesheet" href="CSS/main.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
+</head>
+
+<body style="background-color:#f5f5f5;">
+	<div class="progress" style="margin-top:100px;height:5rem;display:block;overflow:visible;background-color:#f5f5f5;">
+		<div class="circle done">
+			<!--add the 'done' class for completed steps-->
+			<span class="label">1</span>
+			<!--step number-->
+			<span class="title">Loan Details</span>
+			<!--step title-->
+			<span class="bar"></span>
+		</div>
+		<div class="circle done">
+			<!--add the 'active' class for the current step-->
+			<span class="label">2</span>
+			<span class="title">Business Details</span>
+			<span class="bar"></span>
+		</div>
+		<div class="circle done">
+			<!--no added class for future steps-->
+			<span class="label">3</span>
+			<span class="title">Contact Details</span>
+			<span class="bar"></span>
+		</div>
+		<div class="circle done">
+			<!--add the 'done' class for completed steps-->
+			<span class="label">4</span>
+			<!--step number-->
+			<span class="title">Financial Details</span>
+			<!--step title-->
+			<span class="bar"></span>
+		</div>
+		<div class="circle active">
+			<!--add the 'done' class for completed steps-->
+			<span class="label">5</span>
+			<!--step number-->
+			<span class="title">Documents</span>
+			<!--step title-->
+		</div>
+	</div>
+	<h1>Documents</h1>
+	<h1>{{what}}</h1>
+	<fieldset>
+		<form method="post" enctype="multipart/form-data">
+			{% csrf_token %}
+			<br>
 					<label for="KTP">Upload KTP:</label>    			
           			<input type="file" name="KTP" required>
           			<br>
@@ -59,6 +82,7 @@
           			<br>
     				<button type="submit">Upload</button>
 
-          		</form>
-          	</fieldset>
-          </body>
+		</form>
+	</fieldset>
+	
+</body>
