--- a/msmeapp/templates/FinancialDetails.html
+++ b/msmeapp/templates/FinancialDetails.html
@@ -1,93 +1,120 @@
 {% load staticfiles %}
 
-  	<head>
-				<meta charset="utf-8">
-				<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<title>Financial Details</title>
-				<link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
-			 <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type='text/css'>
-			 <link rel="stylesheet" href="CSS/main.css">
-		</head>
-		<body>
-			<div class="progress">
-			<div class="circle done"> <!--add the 'done' class for completed steps-->
-			<span class="label">1</span> <!--step number-->
-			<span class="title">Loan Details</span> <!--step title-->
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Financial Details</title>
+	<link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
+	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type='text/css'>
+	<link rel="stylesheet" href="CSS/main.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
+</head>
+
+<body style="background-color:#f5f5f5;">
+	<div class="progress" style="margin-top:100px;height:5rem;display:block;overflow:visible;background-color:#f5f5f5;">
+		<div class="circle done">
+			<!--add the 'done' class for completed steps-->
+			<span class="label">1</span>
+			<!--step number-->
+			<span class="title">Loan Details</span>
+			<!--step title-->
 			<span class="bar"></span>
-			</div>
-			<div class="circle done"> <!--add the 'active' class for the current step-->
+		</div>
+		<div class="circle done">
+			<!--add the 'active' class for the current step-->
 			<span class="label">2</span>
 			<span class="title">Business Details</span>
 			<span class="bar"></span>
-			</div>
-			<div class="circle done"> <!--no added class for future steps-->
+		</div>
+		<div class="circle done">
+			<!--no added class for future steps-->
 			<span class="label">3</span>
 			<span class="title">Contact Details</span>
 			<span class="bar"></span>
-			</div>
-			<div class="circle active"> <!--add the 'done' class for completed steps-->
-			<span class="label">4</span> <!--step number-->
-			<span class="title">Financial Details</span> <!--step title-->
+		</div>
+		<div class="circle active">
+			<!--add the 'done' class for completed steps-->
+			<span class="label">4</span>
+			<!--step number-->
+			<span class="title">Financial Details</span>
+			<!--step title-->
 			<span class="bar"></span>
-			</div>
-			<div class="circle"> <!--add the 'done' class for completed steps-->
-			<span class="label">5</span> <!--step number-->
-			<span class="title">Documents</span> <!--step title-->
-			</div>
-			</div>
-			<form action="" method="POST"> 
-				{% csrf_token %}
-				<h1>Financial Details</h1>
-				
-				<fieldset>
-					<h2>Assets</h2>
-				<label for="Fixed Assets">Fixed Assets:</label>
-				<input type="text" id="Fixed_Assets" name="Fixed_Assets">
-				<br>
-				<label for="Inangible Assets">Intangible Assets:</label>
-				<input type="text" id="Intangible_Assets" name="Intangible_Assets">
-				<br>
-				<label for="Current Assets">Current Assets:</label>
-				<input type="text" id="Current_Assets" name="Current_Assets">
-				<br>
-				<label for="Non Current Assets">Non Current Assets:</label>
-				<input type="text" id="Non_Current_Assets" name="Non_Current_Assets">
-				<br>
-					<h2>Capital</h2>
-				<label for="Issued Capital">Issued Capital:</label>
-				<input type="text" id="Issued_Capital" name="Issued_Capital">
-				<br>
-				<label for="Paid Up Capital">Paid Up Capital:</label>
-				<input type="text" id="Paid_Up_Capital" name="Paid_Up_Capital">
-				<br>
-					<h2>Liabilities</h2>
-				<label for="Term Liabilities">Term Liabilities:</label>
-				<input type="text" id="Term_Liabilities" name="Term_Liabilities">
-				<br>
-				<label for="Current Liabilities">Current Liabilities:</label>
-				<input type="text" id="Current_Liabilities" name="Current_Liabilities">
-				<br>
-					<h2>Cash Flow</h2>
-				<label for="Operations Activities">Operations Activities:</label>
-				<input type="text" id="Operations_Activities" name="Operations_Activities">
-				<br>
-				<label for="Investing Activities">Investing Activities:</label>
-				<input type="text" id="Investing_Activities" name="Investing_Activities">
-				<br>
-				<label for="Financing Activities">Financing Activities:</label>
-				<input type="text" id="Financing_Activities" name="Financing_Activities">
-				<br>
-					<h2>Reserves</h2>
-				<label for="Subsidy from government">Subsidy from government:</label>
-				<input type="text" id="Subsidy_Gov" name="Subsidy_Gov">
-				<br>
-				<label for="General Reserves">General Reserves:</label>
-				<input type="text" id="General_Reserves" name="General_Reserves">
-				<br>
-     
-					<button type="button" onclick="POST">Back</button>
-					<button type="submit" onsubmit="POST">Next</button>
-				</form>
+		</div>
+		<div class="circle">
+			<!--add the 'done' class for completed steps-->
+			<span class="label">5</span>
+			<!--step number-->
+			<span class="title">Documents</span>
+			<!--step title-->
+		</div>
+	</div>
+	<form action="" method="POST">
+		{% csrf_token %}
+		<h1>Financial Details</h1>
+
+		<fieldset>
+			<h2>Assets</h2>
+			<label for="Fixed Assets">Fixed Assets:</label>
+			<input type="text" id="Fixed_Assets" name="Fixed_Assets" class="form-control form-control-lg">
+			<br>
+			<label for="Inangible Assets">Intangible Assets:</label>
+			<input type="text" id="Intangible_Assets" name="Intangible_Assets" class="form-control form-control-lg">
+			<br>
+			<label for="Current Assets">Current Assets:</label>
+			<input type="text" id="Current_Assets" name="Current_Assets" class="form-control form-control-lg">
+			<br>
+			<label for="Non Current Assets">Non Current Assets:</label>
+			<input type="text" id="Non_Current_Assets" name="Non_Current_Assets" class="form-control form-control-lg">
+			<br>
+			<h2>Capital</h2>
+			<label for="Issued Capital">Issued Capital:</label>
+			<input type="text" id="Issued_Capital" name="Issued_Capital" class="form-control form-control-lg">
+			<br>
+			<label for="Paid Up Capital">Paid Up Capital:</label>
+			<input type="text" id="Paid_Up_Capital" name="Paid_Up_Capital" class="form-control form-control-lg">
+			<br>
+			<h2>Liabilities</h2>
+			<label for="Term Liabilities">Term Liabilities:</label>
+			<input type="text" id="Term_Liabilities" name="Term_Liabilities" class="form-control form-control-lg">
+			<br>
+			<label for="Current Liabilities">Current Liabilities:</label>
+			<input type="text" id="Current_Liabilities" name="Current_Liabilities" class="form-control form-control-lg">
+			<br>
+			<h2>Cash Flow</h2>
+			<label for="Operations Activities">Operations Activities:</label>
+			<input type="text" id="Operations_Activities" name="Operations_Activities"
+				class="form-control form-control-lg">
+			<br>
+			<label for="Investing Activities">Investing Activities:</label>
+			<input type="text" id="Investing_Activities" name="Investing_Activities"
+				class="form-control form-control-lg">
+			<br>
+			<label for="Financing Activities">Financing Activities:</label>
+			<input type="text" id="Financing_Activities" name="Financing_Activities"
+				class="form-control form-control-lg">
+			<br>
+			<h2>Reserves</h2>
+			<label for="Subsidy from government">Subsidy from government:</label>
+			<input type="text" id="Subsidy_Gov" name="Subsidy_Gov" class="form-control form-control-lg">
+			<br>
+			<label for="General Reserves">General Reserves:</label>
+			<input type="text" id="General_Reserves" name="General_Reserves" class="form-control form-control-lg">
+			<br>
+
+			<button type="button" onclick="POST">Back</button>
+			<br><br>
+			<button type="submit" onsubmit="POST">Next</button>
+	</form>
 
 
-		</body>
+</body>
