--- a/msmewb/templates/AlreadyVerified.html
+++ b/msmewb/templates/AlreadyVerified.html
@@ -1,5 +1,3 @@
-
-
 {% load staticfiles %}
 {% block content %}
 <!doctype html>
@@ -8,7 +6,6 @@
    <!-- Required meta tags -->
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <title>Loan Approved</title>
 
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -38,6 +35,16 @@
      margin-bottom: 40px;
      }
    </style>
+   <script>
+    function goBack(event) {
+      event.preventDefault();
+      console.log("gfwese")
+      window.history.back();
+    }
+    function goBackAppln(){
+      document.forms["backs"].submit();
+    }
+    </script>
    <nav class="navbar bg-faded">
  <div class="container">
 
@@ -46,23 +53,19 @@
        <a href="https://uangteman.com"><img class="img-logo" src="https://uangteman.com/assets/frontend/statics/v4/images/rebranding/logo_rebranding.png" alt="Money friend"></a>
      </li>
    </ul>
-   <form action="" method="POST">
-    {% csrf_token %}
-    <button type="submit" name="Logout" class="btn btn-danger" style="width: 100px; height: 40px; border-radius:15px; margin-left: 100px;">Logout</button>
-  </form>
  </div>
 </nav>
  </head>
  <body style="background: #f5f5f5;">
-   <div>
-    <h1>Loan has been approved, amount has been disbursed</h1>
-   </div>
    <div class="container" style="position: center;">
      <div class="row col text-center">
-        <form action="" method="POST">
+      <div>
+    <h1>Application is already verified.</h1>
+   </div>
+        <form action="" name="backs" method="POST">
           {% csrf_token %}
-          <button type="submit" name="view_apps" class="btn btn-primary" style="width: 150px; height: 40px; border-radius:15px;">View Applications</button>
-          <button type="submit" name="Back" class="btn btn-primary" style="width: 150px; height: 40px; border-radius:15px;">Back</button>
+          <button type="button" name="Back" onclick="goBack(event); return false;" class="btn btn-primary" style="width: 150px; height: 40px; border-radius:15px;">Back</button>
+          <button type="button" name="BackAppln" onclick="goBackAppln();" class="btn btn-primary" style="width: 190px; height: 40px; border-radius:15px;">Back to Applications</button>
          </form>
      </div>
  </div>
