--- a/msmewb/templates/CSverifiedApplications.html
+++ b/msmewb/templates/CSverifiedApplications.html
@@ -1,19 +1,19 @@
 {% load staticfiles %}
 {% block content %}
+<!--
 <html>
   <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document Verification</title>
-        <link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
-        <link rel="stylesheet" href="{% static 'CSS/blog.css' %}">           
+        < <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Customer Service Dashboard</title>
+   Bootstrap CSS 
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">      
     </head>
     <body>    
         <form action="" method="POST">
-        {% csrf_token %}
-           <button type="button"><a href="{% url 'Logout' %}">Logout</a></button>
+                            {% csrf_token %}
 		   <div>
-            <table>
+            <center><table class="table table-striped table-bordered" style="border-color: black;font-size: 17px; width:95%;">
                 <thead>
                     <tr>
                         <th>Application ID</th>
@@ -38,7 +38,7 @@
                         <td>{{appln.Status}}</td>
                         <td>
                             <button type="submit" name="DocumentVerification" value={{appln.Application_ID}}>Document Verified</button>
-                            <button type="submit" name="Reject" value={{appln.Application_ID}}>Reject</button>
+                            <button type="submit" name="Reject" value={{appln.Application_ID}}>>Reject</button>
                             <button type="submit" name="DocumentsAwaiting" value={{appln.Application_ID}}>Documents Awaiting</button>
                         </td>
                     </tr>
@@ -46,6 +46,104 @@
                 </tbody>
             </table>      
            </div>
+           </
     </body>
  </html>
+-->
+<!doctype html>
+<html lang="en">
+ <head>
+   <!-- Required meta tags -->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+   <!-- Bootstrap CSS -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+   <style type="text/css">
+      nav{
+       background: white;
+      }
+       label{
+       color: #005eb8;
+     }
+     .img-logo{
+         width: 188px;
+         margin-top: 10px;
+         margin-bottom: 10px;
+     }
+     .title-form {
+     width: 75%;
+     position: relative;
+     left:10%;
+
+     font-size: 24px!important;
+     display: inline-block;
+     color: #005eb8;
+     font-weight: normal;
+     font-family: 'MaaxRounded-medium';
+     text-align: center;
+     margin-bottom: 40px;
+     }
+   </style>
+   <nav class="navbar bg-faded">
+ <div class="container">
+
+   <ul class="nav navbar-nav navbar-logo mx-auto">
+     <li class="nav-item">
+       <a href="https://uangteman.com"><img class="img-logo" src="https://uangteman.com/assets/frontend/statics/v4/images/rebranding/logo_rebranding.png" alt="Money friend"></a>
+     </li>
+   </ul>
+   <form action="" method="POST">
+    {% csrf_token %}
+    <button type="submit" name="Logout" class="btn btn-danger" style="width: 100px; height: 40px; border-radius:15px; margin-left: 100px;">Logout</button>
+  </form>
+ </div>
+</nav>
+ </head>
+ <body style="background: #f5f5f5;">
+   <div class="container">
+     <div class="row col text-center">
+       <table class="table table-hover table-striped table-bordered" style="background-color: white; margin-top:50px;">
+        <thead>
+         <tr>
+           <th scope="col">Application Id</th>
+           <th scope="col">Amount</th>
+           <th scope="col">Tenure</th>
+           <th scope="col">Date of Application</th>
+           <th scope="col">Purpose</th>
+           <th scope="col">Frequency</th>
+           <th scope="col">Status</th>
+           <th scope="col">Operations</th>
+         </tr>
+        </thead>
+       <tbody>
+         {% for appln in applications %}
+         <tr>
+           <td>{{appln.Application_ID}}</td>
+           <td>{{appln.Amount}}</td>
+           <td>{{appln.Tenure}}</td>
+           <td>{{appln.Date_Application}}</td>
+           <td>{{appln.Purpose}}</td>
+           <td>{{appln.Frequency}}</td>
+           <td>{{appln.Status}}</td>
+           <td><button class="btn btn-primary" type="submit" name="DocumentVerification" value={{appln.Application_ID}}>Document Verified</button>
+          <button class="btn btn-primary" type="submit" name="Reject" value={{appln.Application_ID}}>>Reject</button>
+          <button class="btn btn-primary" type="submit" name="DocumentsAwaiting" value={{appln.Application_ID}}>Documents Awaiting
+          </td>
+         </tr>
+         {% endfor%}
+      </tbody>
+</table>
+
+
+     </div>
+   </div>
+
+   <!-- Optional JavaScript -->
+   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+ </body>
+</html>
  {% endblock %}
