--- a/msmewb/templates/DocumentsRejected.html
+++ b/msmewb/templates/DocumentsRejected.html
@@ -1,12 +1,13 @@
 {% load staticfiles %}
 {% block content %}
+<!--
 <html>
   <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document Rejected</title>
-        <link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
-        <link rel="stylesheet" href="{% static 'CSS/blog.css' %}">           
+        <link rel="stylesheet" href="static/blog.css">
+        <link rel="stylesheet" href="static/exp.css">       
     </head>
     <body>
     	<h1>Application has been rejected</h1>
@@ -15,7 +16,75 @@
     	 <form action="" method="POST">
             {% csrf_token %}
     	<button type="submit" onclick="POST" name="view_apps">View Applications</button>
-      <button type="button"><a href="{% url 'Logout' %}">Logout</a></button>
     </body>
+-->
+<!doctype html>
+<html lang="en">
+ <head>
+   <!-- Required meta tags -->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+   <!-- Bootstrap CSS -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+   <style type="text/css">
+      nav{
+       background: white;
+      }
+       label{
+       color: #005eb8;
+     }
+     .img-logo{
+         width: 188px;
+         margin-top: 10px;
+         margin-bottom: 10px;
+     }
+     .title-form {
+     width: 75%;
+     position: relative;
+     left:10%;
+
+     font-size: 24px!important;
+     display: inline-block;
+     color: #005eb8;
+     font-weight: normal;
+     font-family: 'MaaxRounded-medium';
+     text-align: center;
+     margin-bottom: 40px;
+     }
+   </style>
+   <nav class="navbar bg-faded">
+ <div class="container">
+
+   <ul class="nav navbar-nav navbar-logo mx-auto">
+     <li class="nav-item">
+       <a href="https://uangteman.com"><img class="img-logo" src="https://uangteman.com/assets/frontend/statics/v4/images/rebranding/logo_rebranding.png" alt="Money friend"></a>
+     </li>
+   </ul>
+
+ </div>
+</nav>
+ </head>
+ <body style="background: #f5f5f5;">
+   <div class="container">
+     <div class="row col text-center">
+        <form action="" method="POST">
+         {% csrf_token %}
+       <div style="position: relative; left: 20%; margin-top:30%;">
+
+       <button type="submit" name="view_apps" class="btn btn-success" style="width: 200px; 
+         height: 50px; border-radius:15px; margin-left: 100px;">View Applications</button>
+       </div>
+   </form>
+     </div>
+   </div>
+
+   <!-- Optional JavaScript -->
+   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
+</html>
+{% endblock %}
 {% endblock %}
