--- a/msmewb/templates/LoginWB.html
+++ b/msmewb/templates/LoginWB.html
@@ -1,27 +1,136 @@
+<!doctype html>
+<html lang="en">
 {% load staticfiles %}
-<head>
+  <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Login</title>
-   <link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
-</head>
-<body>
-    <form action="" method="POST">
-     {% csrf_token %}
-       <h1>Login</h1>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
+    <style type="text/css">
+      ::placeholder { /* Chrome/Opera/Safari */
+        color: lightgrey;
+        font-size: 15px;
+      }
+      .a{
+        color: solid lightgrey;
+         font-size: 15px;
+      }
+       nav{
+        background: white;
+       }
+      label{
+        color: #005eb8;
+      }
+     
+      
+      .img-logo {
+          width: 188px;
+          margin-top: 10px;
+          margin-bottom: 10px; 
+      }
+      .title-form {
+      width: 75%;
+      position: relative;
+      left:10%;
 
-       <fieldset>
+      font-size: 24px!important;
+      display: inline-block;
+      color: #005eb8;
+      font-weight: normal;
+      font-family: 'MaaxRounded-medium';
+      text-align: center;
+      margin-bottom: 40px;
+      }
+      .btn-next {
+    height: 50px;
+    padding: 12px 25px;
+    display: inline-block;
+    position: relative;
+    border: 0px;
+    color: #fff;
+    border-radius: 5px;
+    background-color: #005eb8;
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: bold;
+    float: center;
+    margin-top: 10px;
+    text-align: center;
+    min-width: 150px;
+}
 
-         <label for="Eid">Employee ID:</label>
-         <input type="text" id="eid" name="eid" autocomplete="on" autofocus>
 
-         <label for="password">Password:</label>
-         <input type="password" id="password" name="password" autocomplete="on">
+    </style>
 
+<nav class="navbar bg-faded">
+  <div class="container">
+    
+    <ul class="nav navbar-nav navbar-logo mx-auto">
+      <li class="nav-item">
+        <a href="https://uangteman.com"><img class="img-logo" src="https://uangteman.com/assets/frontend/statics/v4/images/rebranding/logo_rebranding.png" alt="Money friend"></a>
+      </li>
+    </ul>
+   
+  </div>
+</nav>
+  
+  </head>
+  <body style="background-color: #f5f5f5;">
+    
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-2 col-md-2">
+          
+        </div>
+        <div class="col-lg-8 col-md-8">
 
-          <button type="submit" onsubmit="Post">Login</button>
+          <p class="title-form" style="padding-top: 25px;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit; font-weight: 900;">Enter your login credentials</font></font></p>
+          <form action="" method="POST">
+            {% csrf_token %}
+            <div class="col-lg-10" style="position: relative; left: 8.75%;">
+             
+              <div class="form-group">
+                <label for="exampleFormControlInput1"><strong>Employee Id</strong></label>
+                <input type="text" class="form-control form-control-lg" id="exampleFormControlInput1" placeholder="CS/ST/MG ID" name="eid">
+              </div>
+               <div class="form-group">
+                <label for="exampleFormControlInput1"><strong>Password</strong></label>
+                <input type="password" class="form-control form-control-lg" id="exampleFormControlInput1" placeholder="" name="password">
+              </div>
+              <div style="padding-top: 5px;">
+                <hr>
+              </div>
+              <div class="col text-center">
+                <button type="submit" class="btn btn-next" onsubmit="Post" >login</button>
+              </div>
+              
 
-        </fieldset>
+            </div>
+          
+          </form>
+        </div>
+        <div class="col-lg-2 col-md-2">
+          
+        </div>
+      </div>
+    </div>
+  
+  
+  
+   
 
-   </form>
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+      $('[data-toggle="tooltip"]').tooltip();   
+    });
+    </script>
+  </body>
+</html>
