--- a/msmeapp/templates/ContactDetails.html
+++ b/msmeapp/templates/ContactDetails.html
@@ -6,7 +6,6 @@
   <title>Contact Details</title>
   <link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type='text/css'>
-  <link rel="stylesheet" href="CSS/main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -315,7 +314,7 @@
   </script>
 </head>
 
-<body style="background-color:#f5f5f5;">
+<body style="background-color:#f5f5f5;" onload="populate()" >
   <div class="progress" style="margin-top:100px;height:5rem;display:block;overflow:visible;background-color:#f5f5f5;">
     <div class="circle done">
       <!--add the 'done' class for completed steps-->
@@ -371,9 +370,9 @@
 
       <br>
       <label for="Gender">Gender:</label>
-      <input type="radio" name="gender" value="M"> Male
-      <input type="radio" name="gender" value="F"> Female
-      <input type="radio" name="gender" value="O"> Other
+      <input type="radio" name="gender" id="M" value="M"> Male
+      <input type="radio" name="gender" id="F" value="F"> Female
+      <input type="radio" name="gender" id="O" value="O"> Other
       <br>
       <br>
       <label for="Mobile Number">Mobile Number:</label>
@@ -462,5 +461,46 @@
       <button type="submit" onsubmit="Post">Next</button>
       <br>
   </form>
-
+  <script>
+    function populate(){
+      function setSelectedValue(selectObj, valueToSet) {
+        for (var i = 0; i < selectObj.options.length; i++) {
+          if (selectObj.options[i].value == valueToSet) {
+            selectObj.options[i].selected = true;
+            return;
+          }
+        }
+			}
+      document.getElementById("Name").value = '{{contact.Applicant_Name}}';
+      document.getElementById("Age").value = '{{contact.Applicant_Age}}';
+      if('{{contact.Applicant_Gender}}' == 'M'){
+        document.getElementById("M").checked = true;
+      }
+      else if('{{contact.Applicant_Gender}}' == 'F') {
+        document.getElementById("F").checked = true;
+      }
+      else {
+        document.getElementById("O").checked = true
+      }
+      document.getElementById("mobile").value = '{{contact.Applicant_Mobile_No}}';
+      document.getElementById("email").value = '{{contact.Applicant_Email}}';
+      document.getElementById("pan").value = '{{contact.Applicant_PAN}}';
+      document.getElementById("HNO").value = '{{contact.A_House_No}}';
+      document.getElementById("street").value = '{{contact.A_Street}}';
+      document.getElementById("area").value = '{{contact.A_Locality}}';      
+      var Country = document.getElementById("country");
+      var valueToSet = '{{contact.A_Country}}'
+      setSelectedValue(Country,valueToSet)
+      var State = document.getElementById("State");
+      valueToSet = '{{contact.A_State}}'
+      setSelectedValue(State,valueToSet)
+      var City = document.getElementById("City");
+      var opt = document.createElement('option');
+      opt.value = '{{contact.A_City}}';
+      opt.text = '{{contact.A_City}}';
+      opt.selected = true;
+      City.options.add(opt);
+      document.getElementById("pincode").value = '{{contact.A_PINCode}}';
+    }
+  </script>
 </body>
