--- a/msmeapp/templates/FinancialDetails.html
+++ b/msmeapp/templates/FinancialDetails.html
@@ -6,7 +6,6 @@
 	<title>Financial Details</title>
 	<link rel="stylesheet" href="{% static 'CSS/exp.css' %}">
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" type='text/css'>
-	<link rel="stylesheet" href="CSS/main.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -20,7 +19,7 @@
 		crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color:#f5f5f5;">
+<body style="background-color:#f5f5f5;" onload="populate()">
 	<div class="progress" style="margin-top:100px;height:5rem;display:block;overflow:visible;background-color:#f5f5f5;">
 		<div class="circle done">
 			<!--add the 'done' class for completed steps-->
@@ -116,5 +115,22 @@
 			<button type="submit" onsubmit="POST">Next</button>
 	</form>
 
+	<script>
+		function populate() {
+			document.getElementById("Fixed_Assets").value = '{{financial.Fixed_Assets}}';
+			document.getElementById("Intangible_Assets").value = '{{financial.Intangible_Assets}}';
+			document.getElementById("Current_Assets").value = '{{financial.Current_Assets}}';
+			document.getElementById("Non_Current_Assets").value = '{{financial.Non_Current_Assets}}';
+			document.getElementById("Issued_Capital").value = '{{financial.Issued_Capital}}';
+			document.getElementById("Paid_Up_Capital").value = '{{financial.Paid_Up_Capital}}';
+			document.getElementById("Term_Liabilities").value = '{{financial.Term_Liabilities}}';
+			document.getElementById("Current_Liabilities").value = '{{financial.Current_Liabilities}}';
+			document.getElementById("Operations_Activities").value = '{{financial.Operations_Activities}}';
+			document.getElementById("Investing_Activities").value = '{{financial.Investing_Activities}}';
+			document.getElementById("Financing_Activities").value = '{{financial.Financing_Activities}}';
+			document.getElementById("Subsidy_Gov").value = '{{financial.Subsidy_Gov}}';			
+			document.getElementById("General_Reserves").value = '{{financial.General_Reserves}}';
+		}
+	</script>
 
 </body>
